--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 #pour afficher le message d'erreur de associé à une exception.
 server.error.include-message=always
 server.port = 8082
+
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.application.name =USER-SERVICE
