--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,10 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>3.1.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
