--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ server.error.include-message=always
 server.port = 8082
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-spring.application.name =USER-SERVICE
+spring.application.name =BUDGET-SERVICE
