integration Spring Feign pour référencer automatiquement les urls des  autres microservices grâce à leur noms plutôt que grâce à leurs url et port, en passant par eureka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bd-taleno-budget-api
-spring.datasource.username=root
-spring.datasource.password=monpassRoot1
+#spring.datasource.url=jdbc:mysql://localhost:3306/bd-taleno-budget-api
+#spring.datasource.username=root
+#spring.datasource.password=monpassRoot1
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #ndique à Hibernate de comparer le schéma actuel de la base de données avec le schéma défini dans les entités
 # de l'application, et d'appliquer les modifications nécessaires pour mettre à jour le schéma de la base de données
 # afin qu'il corresponde au schéma défini dans les entités.
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 #pour afficher le message d'erreur de associé à une exception.
-server.error.include-message=always
-server.port = 8082
+#server.error.include-message=always
+#server.port = 8082
 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.config.import=optional:configserver:http://localhost:8888
 spring.application.name =BUDGET-SERVICE
