integration de zipkin pour une traçabilité distribué et centralisée

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.config.import=optional:configserver:http://localhost:8888
 
 #actuator
 management.endpoints.web.exposure.include=*
+#integration de zipkin traces distribueted
+management.tracing.sampling.probability=1.0
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
